
[package]
name = "rama"
readme = "README.md"
documentation = "https://docs.rs/rama"
description = "modular service framework"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
resolver = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
[workspace]
members = [
    ".",
    "fuzz",
    "rama-cli",
    "rama-core",
    "rama-crypto",
    "rama-dns",
    "rama-error",
    "rama-haproxy",
    "rama-http",
    "rama-http-backend",
    "rama-http-core",
    "rama-http-core/tests/h2-fuzz",
    "rama-http-core/tests/h2-support",
    "rama-http-headers",
    "rama-http-types",
    "rama-macros",
    "rama-macros/tests/macros",
    "rama-net",
    "rama-proxy",
    "rama-socks5",
    "rama-tcp",
    "rama-tls-boring",
    "rama-tls-rustls",
    "rama-tower",
    "rama-ua",
    "rama-udp",
    "rama-unix",
    "rama-utils",
    "rama-ws",
]

[workspace.package]
version = "0.3.0-alpha.2"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/plabayo/rama"
homepage = "https://ramaproxy.org"
keywords = ["io", "async", "non-blocking", "service", "rama"]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
rust-version = "1.88.0"

[workspace.dependencies]
arc-swap = "1.7"
async-compression = "0.4"
async-stream = { version = "0.3" }
atomic-waker = "1.1"
aws-lc-rs = "1.10.0"
aws-lc-sys = { version = "0.29", features = ["bindgen"] }
base64 = "0.22"
bitflags = "2.9"
brotli = "8"
byteorder = "1.5"
bytes = "1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
const_format = "0.2"
csv = "1.3"
deadpool-postgres = "0.14"
derive_more = "2.0"
divan = "0.1"
env_logger = "0.11"
escargot = "0.5"
flate2 = "1.1"
flume = "0.11"
fnv = "1.0"
futures = "0.3"
futures-channel = "0.3"
h2 = "0.4"
hex = "0.4"
hickory-resolver = { version = "0.25", default-features = false, features = [
    "tokio",
    "system-config",
] }
honggfuzz = "0.5"
http = "1"
http-body = "1"
http-body-util = "0.1"
http-range-header = "0.4"
httparse = "1.10"
httpdate = "1.0"
indexmap = "2"
ipnet = "2.11"
iri-string = "0.7"
itertools = "0.14"
itoa = "1"
jemallocator = { package = "tikv-jemallocator", version = "0.6" }
libfuzzer-sys = "0.4"
matchit = "0.8"
md5 = "0.8"
memchr = "2.7"
mimalloc = { version = "0.1", default-features = false }
mime = "0.3.17"
mime_guess = { version = "2", default-features = false }
moka = "0.12"
nom = "8.0.0"
opentelemetry = { version = "0.30", default-features = false, features = [
    "trace",
] }
opentelemetry-http = { version = "0.30", default-features = false }
opentelemetry-otlp = { version = "0.30", default-features = false, features = [
    "http-proto",
    "internal-logs",
    "logs",
    "metrics",
    "trace",
] }
opentelemetry-semantic-conventions = { version = "0.30", features = [
    "semconv_experimental",
] }
opentelemetry_sdk = { version = "0.30", default-features = false, features = [
    "trace",
    "rt-tokio",
] }
parking_lot = "0.12"
percent-encoding = "2.3"
pin-project-lite = "0.2"
proc-macro2 = "1.0"
psl = "2"
quickcheck = "1.0"
quote = "1.0"
radix_trie = "0.2"
rama-boring = "0.3.1"
rama-boring-tokio = "0.3.1"
rama-core = { version = "0.3.0-alpha.2", path = "./rama-core" }
rama-crypto = { version = "0.3.0-alpha.2", path = "./rama-crypto" }
rama-dns = { version = "0.3.0-alpha.2", path = "./rama-dns" }
rama-error = { version = "0.3.0-alpha.2", path = "./rama-error" }
rama-haproxy = { version = "0.3.0-alpha.2", path = "./rama-haproxy" }
rama-http = { version = "0.3.0-alpha.2", path = "./rama-http" }
rama-http-backend = { version = "0.3.0-alpha.2", path = "./rama-http-backend" }
rama-http-core = { version = "0.3.0-alpha.2", path = "./rama-http-core" }
rama-http-headers = { version = "0.3.0-alpha.2", path = "./rama-http-headers" }
rama-http-types = { version = "0.3.0-alpha.2", path = "./rama-http-types" }
rama-macros = { version = "0.3.0-alpha.2", path = "./rama-macros" }
rama-net = { version = "0.3.0-alpha.2", path = "./rama-net" }
rama-proxy = { version = "0.3.0-alpha.2", path = "./rama-proxy" }
rama-socks5 = { version = "0.3.0-alpha.2", path = "./rama-socks5" }
rama-tcp = { version = "0.3.0-alpha.2", path = "./rama-tcp" }
rama-tls-boring = { version = "0.3.0-alpha.2", path = "./rama-tls-boring" }
rama-tls-rustls = { version = "0.3.0-alpha.2", path = "./rama-tls-rustls" }
rama-tower = { version = "0.3.0-alpha.2", path = "./rama-tower" }
rama-ua = { version = "0.3.0-alpha.2", path = "./rama-ua" }
rama-udp = { version = "0.3.0-alpha.2", path = "./rama-udp" }
rama-unix = { version = "0.3.0-alpha.2", path = "./rama-unix" }
rama-utils = { version = "0.3.0-alpha.2", path = "./rama-utils" }
rama-ws = { version = "0.3.0-alpha.2", path = "./rama-ws" }
rand = "0.9"
ratatui = "0.29"
rcgen = { version = "0.14", default-features = false, features = ["pem", "aws_lc_rs", "x509-parser"] }
regex = "1.11"
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "std",
    "tls12",
    "aws_lc_rs",
] }
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
rustls-pki-types = "^1"
rustversion = "1.0"
serde = "1.0"
serde_html_form = "0.2"
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
slab = "0.4"
smallvec = { version = "1.15", features = ["const_generics", "const_new"] }
smol_str = "0.3"
socket2 = "0.6"
spmc = "0.3"
syn = "2.0"
sync_wrapper = "1.0"
tempfile = "3.20"
terminal-prompt = "0.2"
tokio = "1.46"
tokio-graceful = "0.2"
tokio-postgres = "0.7"
tokio-rustls = { version = "0.26", default-features = false, features = [
    "logging",
    "tls12",
    "aws_lc_rs",
] }
tokio-stream = "0.1"
tokio-test = "0.4"
tokio-util = "0.7"
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-opentelemetry = "0.31"
tracing-subscriber = "0.3"
tracing-tree = "0.4"
trybuild = "1.0"
tui-logger = { version = "0.17", features = ["tracing-support"] }
unicode-normalization = "0.1"
uuid = "1.17"
venndb = "0.5"
walkdir = "2.5"
want = "0.3"
webpki-roots = "1.0"
zstd = "0.13"

[workspace.lints.rust]
unreachable_pub = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
todo = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
mem_forget = "warn"
unused_self = "warn"
filter_map_next = "warn"
needless_continue = "warn"
needless_borrow = "warn"
match_wildcard_for_single_variants = "warn"
if_let_mutex = "warn"
await_holding_lock = "warn"
imprecise_flops = "warn"
suboptimal_flops = "warn"
lossy_float_literal = "warn"
rest_pat_in_fully_bound_structs = "warn"
fn_params_excessive_bools = "warn"
exit = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
option_option = "warn"
verbose_file_reads = "warn"
unnested_or_patterns = "warn"
str_to_string = "warn"
type_complexity = "allow"

[features]
default = []
full = [
    "compression",
    "rustls",
    "boring",
    "cli",
    "tcp",
    "udp",
    "http-full",
    "proxy-full",
    "tower",
    "opentelemetry",
]
compression = ["http", "rama-http?/compression", "rama-tls-boring?/compression"]
tls = [
    "net",
    "rama-net?/tls",
    "rama-http?/tls",
    "rama-http-backend?/tls",
    "rama-ua?/tls",
]
rustls = ["tls", "dep:rama-tls-rustls", "rama-http-backend?/rustls"]
boring = ["tls", "dep:rama-tls-boring", "rama-http-backend?/boring"]
cli = [
    "dep:base64",
    "dep:bytes",
    "dep:hex",
    "dep:serde",
    "dep:serde_json",
    "dep:serde_html_form",
    "dep:tokio",
    "http",
]
net = ["dep:rama-net"]
dns = ["net", "dep:rama-dns", "rama-socks5?/dns"]
tcp = ["dns", "dep:rama-tcp"]
udp = ["net", "dep:rama-udp"]
ws = ["dep:rama-ws", "http"]
http = [
    "net",
    "dep:rama-http",
    "net",
    "ua",
    "rama-net?/http",
    "rama-tcp?/http",
    "rama-tower?/http",
    "rama-tls-boring?/ua",
]
http-full = [
    "http",
    "tcp",
    "ws",
    "dep:rama-http-backend",
    "dep:rama-http-core",
    "ua-embed-profiles",
    "compression",

]
proxy = ["dep:rama-proxy"]
haproxy = ["dep:rama-haproxy"]
socks5 = ["dep:rama-socks5", "udp", "tcp", "rama-net/http", "rama-tcp/http"]
ua = ["dep:rama-ua"]
ua-embed-profiles = ["ua", "rama-ua?/embed-profiles"]
proxy-memory-db = ["proxy", "rama-proxy?/memory-db", "rama-net/venndb"]
proxy-live-update = ["proxy", "rama-proxy?/live-update"]
proxy-csv = ["proxy", "rama-proxy?/csv"]
proxy-full = ["proxy-memory-db", "proxy-live-update", "proxy-csv", "haproxy", "socks5"]
tower = ["dep:rama-tower"]
opentelemetry = [
    "rama-core/opentelemetry",
    "rama-http?/opentelemetry",
    "rama-net?/opentelemetry",
]

[dependencies]
base64 = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
rama-core = { workspace = true }
rama-crypto = { workspace = true }
rama-dns = { workspace = true, optional = true }
rama-haproxy = { workspace = true, optional = true }
rama-http = { workspace = true, optional = true }
rama-http-backend = { workspace = true, optional = true }
rama-http-core = { workspace = true, optional = true }
rama-net = { workspace = true, optional = true }
rama-proxy = { workspace = true, optional = true }
rama-socks5 = { workspace = true, optional = true }
rama-tcp = { workspace = true, optional = true }
rama-tls-boring = { workspace = true, optional = true }
rama-tls-rustls = { workspace = true, optional = true }
rama-tower = { workspace = true, optional = true }
rama-ua = { workspace = true, optional = true }
rama-udp = { workspace = true, optional = true }
rama-utils = { workspace = true }
rama-ws = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_html_form = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "io-std"], optional = true }

[target.'cfg(unix)'.dependencies]
rama-unix = { workspace = true }

[build-dependencies]
rustversion = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
derive_more = { workspace = true, features = ["as_ref"] }
divan = { workspace = true }
escargot = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
h2-support = { path = "rama-http-core/tests/h2-support" }
http = { workspace = true }
itertools = { workspace = true }
itoa = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
pin-project-lite = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_html_form = { workspace = true }
serde_json = { workspace = true }
spmc = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true

[profile.dev]
debug = false
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
incremental = false

[profile.bench]
codegen-units = 1
incremental = false

[[bench]]
name = "ua_parse"
harness = false

[[bench]]
name = "h2"
harness = false

[[bench]]
name = "http_core_body"
path = "benches/http_core_body.rs"
required-features = ["full"]
harness = false

[[bench]]
name = "http_core_connect"
path = "benches/http_core_connect.rs"
required-features = ["full"]
harness = false

[[bench]]
name = "http_core_end_to_end"
path = "benches/http_core_end_to_end.rs"
required-features = ["full"]
harness = false

[[bench]]
name = "http_core_pipeline"
path = "benches/http_core_pipeline.rs"
required-features = ["full"]
harness = false

[[bench]]
name = "http_core_server"
path = "benches/http_core_server.rs"
required-features = ["full"]
harness = false

[[example]]
name = "http_conn_state"
required-features = ["http-full"]

[[example]]
name = "http_connect_proxy"
required-features = ["http-full"]

[[example]]
name = "http_form"
required-features = ["http-full"]

[[example]]
name = "http_health_check"
required-features = ["http-full"]

[[example]]
name = "http_high_level_client"
required-features = ["http-full"]

[[example]]
name = "http_k8s_health"
required-features = ["http-full"]

[[example]]
name = "http_key_value_store"
required-features = ["http-full"]

[[example]]
name = "http_listener_hello"
required-features = ["http-full"]

[[example]]
name = "http_mitm_proxy_boring"
required-features = ["http-full", "boring", "ua"]

[[example]]
name = "http_mitm_proxy_rustls"
required-features = ["http-full", "rustls"]

[[example]]
name = "http_pooled_client"
required-features = ["http-full"]

[[example]]
name = "http_rate_limit"
required-features = ["http-full"]

[[example]]
name = "http_service_fs"
required-features = ["http-full"]

[[example]]
name = "http_service_hello"
required-features = ["http-full"]

[[example]]
name = "http_service_match"
required-features = ["http-full"]

[[example]]
name = "http_telemetry"
required-features = ["http-full", "opentelemetry"]

[[example]]
name = "http_user_agent_classifier"
required-features = ["http-full"]

[[example]]
name = "http_rama_tower"
required-features = ["http-full", "tower"]

[[example]]
name = "http_web_router"
required-features = ["http-full"]

[[example]]
name = "http_web_service_dir_and_api"
required-features = ["http-full"]

[[example]]
name = "http_sse"
required-features = ["http-full"]

[[example]]
name = "http_sse_json"
required-features = ["http-full"]

[[example]]
name = "http_sse_datastar_hello"
required-features = ["http-full"]

[[example]]
name = "http_sse_datastar_test_suite"
required-features = ["http-full"]

[[example]]
name = "https_connect_proxy"
required-features = ["http-full", "rustls"]

[[example]]
name = "mtls_tunnel_and_service"
required-features = ["http-full", "rustls"]

[[example]]
name = "tls_sni_router"
required-features = ["http-full", "boring"]

[[example]]
name = "tcp_listener_hello"
required-features = ["tcp"]

[[example]]
name = "tcp_listener_layers"
required-features = ["tcp"]

[[example]]
name = "udp_codec"
required-features = ["udp"]

[[example]]
name = "tls_boring_dynamic_certs"
required-features = ["boring", "http-full"]

[[example]]
name = "tls_rustls_dynamic_certs"
required-features = ["rustls", "http-full"]

[[example]]
name = "tls_rustls_dynamic_config"
required-features = ["rustls", "http-full"]

[[example]]
name = "tls_boring_termination"
required-features = ["boring", "haproxy", "http-full"]

[[example]]
name = "tls_rustls_termination"
required-features = ["rustls", "haproxy", "http-full"]

[[example]]
name = "socks5_connect_proxy"
required-features = ["dns", "socks5"]

[[example]]
name = "socks5_connect_proxy_mitm_proxy"
required-features = ["dns", "socks5", "boring", "http-full"]

[[example]]
name = "socks5_connect_proxy_over_tls"
required-features = ["socks5", "boring", "http-full"]

[[example]]
name = "socks5_bind_proxy"
required-features = ["socks5"]

[[example]]
name = "socks5_udp_associate"
required-features = ["socks5"]

[[example]]
name = "socks5_udp_associate_framed"
required-features = ["socks5"]

[[example]]
name = "socks5_and_http_proxy"
required-features = ["dns", "socks5", "http-full"]

[[example]]
name = "http_https_socks5_and_socks5h_connect_proxy"
required-features = ["dns", "socks5", "http-full", "boring"]

[[example]]
name = "proxy_connectivity_check"
required-features = ["socks5", "http-full", "tls"]

[[example]]
name = "haproxy_client_ip"
required-features = ["haproxy", "http-full"]

[[example]]
name = "unix_socket"
required-features = ["net"]

[[example]]
name = "unix_socket_http"
required-features = ["http-full"]

[[example]]
name = "unix_datagram_codec"
required-features = ["net"]

[[example]]
name = "ws_echo_server"
required-features = ["http-full"]

[[example]]
name = "ws_chat_server"
required-features = ["http-full"]

[[example]]
name = "ws_tls_server"
required-features = ["http-full", "boring"]

[[example]]
name = "ws_over_h2"
required-features = ["http-full", "boring"]
